force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/Related_Party__c.object-meta.xml
<CustomObject>
    <description
  >One row per party named on a Letters of Executorship: executor(s), spouse, heirs, attorney, and so on. Created entirely by the Letters_Related_Parties repeating section — nothing here is seeded.</description>
    <label>Related Party</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Related Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>