force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>