force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/Estate_Case__c.field-meta.xml
<CustomField>
    <fullName>Estate_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estate Case</label>
    <referenceTo>Estate_Case__c</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>