force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <length>60</length>
    <type>Text</type>
    <description>The Letters_Related_Parties section's matchField — holds the document's partyRef so a re-run updates the same row instead of duplicating it. Not meant for manual entry.</description>
</CustomField>