force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>