force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Number__c</fullName>
    <label>Identity Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>