force-app/idp/examples/letters-of-executorship/objects/Related_Party__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executor</fullName>
            </value>
            <value>
                <fullName>Executrix</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Heir</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Next of Kin</fullName>
            </value>
            <value>
                <fullName>Master's Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>